<resources>
    <string name="app_name">Manillas</string>
    <string name="titulo">MANILLAS</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="cantidad">Cantidad</string>
    <string name="calcular">Calcular</string>
    <string name="mensaje_error_cantidad">Digite la cantidad</string>
    <string name="mensaje_error_cantida_negativa">Ingrese un valor mayor que 1</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string-array name="materiales">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="moneda">
        <item>Dolar</item>
        <item>Pesos Colombianos</item>
    </string-array>
</resources>